# spotify-api-cli

./: README.md  requirements.txt  setup.cfg
src/spotify_api_cli/: cli.py
src/spotify_api_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
