[metadata]
name = spotify-api-cli
platforms = unix, linux, osx
classifiers = 
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    spotify_api_cli
install_requires =
    spotify_minimal_client @ git+https://github.com/rizerphe-student/spotify-minimal-client.git
    click>=8.1.3
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    spotify_cli = spotify_api_cli.cli:cli
